chore: Simplify build command by removing cargo installation

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ main = "build/index.js"
 compatibility_date = "2025-09-19"
 
 [build]
-command = "cargo install worker-build && worker-build --release"
+command = "worker-build --release"
 
 [[d1_databases]]
 binding = "vault1"
