--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ main = "build/index.js"
 compatibility_date = "2025-09-19"
 
 [build]
-command = "worker-build --release"
+command = "bash build.sh"
 
 [[d1_databases]]
 binding = "vault1"
